--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <script>
       // --- 前情提要設定 ---
       const introLines = [
-        { text: "", img: "你的工作室圖.png" }, // 第一格放工作室圖片
+        { text: "", img: "photo.png" }, // 第一格放工作室圖片
         { text: "這是一段關於生存的故事...", img: "" },
         { text: "在這裡，自由是奢侈的空氣。", img: "" },
         { text: "有些錯誤，必須用時間來償還。", img: "" },
