--- a/index.html
+++ b/index.html
@@ -134,10 +134,9 @@
       // --- 前情提要設定 ---
       const introLines = [
         { text: "", img: "photo.png" }, // 第一格放工作室圖片
-        { text: "這是一段關於生存的故事...", img: "" },
+        { text: "這是一段不為人知的故事...", img: "" },
         { text: "在這裡，自由是奢侈的空氣。", img: "" },
-        { text: "有些錯誤，必須用時間來償還。", img: "" },
-        { text: "你準備好面對眼前的挑戰了嗎？", img: "" }
+        { text: "你能活著離開這裡嗎？", img: "" }
       ];
       let currentIntroIndex = 0;
 
