--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
   <script>
     const introLines = [
-      { text: "機智楊老生活：逃離勞改營", img: "https://via.placeholder.com/800x400/333/fff?text=STUDIO+LOGO" },
+      { text: "機智楊老生活：逃離勞改營", img: "photo.png" },
       { text: "這是一段不為人知的故事...", img: "" },
       { text: "在這裡，自由是奢侈的空氣。", img: "" },
       { text: "你能活著離開這裡嗎？", img: "" }
