--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       bottom: 50px;
       font-size: 0.9rem;
       color: #666;
+      opacity: 0; /* 預設隱藏 */
+      transition: opacity 0.5s ease;
       animation: blink 2s infinite;
     }
 
