--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>逃離勞改營</title>
   <style>
     :root {
-      --bg-color: #2563eb; 
+      --bg-color: #0b1120; 
     }
 
     body, html {
@@ -90,7 +90,7 @@
       position: absolute;
       bottom: 0; left: 0;
       width: 100%; height: 250px;
-      background: #fde047;
+      background: #111827;
       border-top: 5px solid #000;
       padding: 30px;
       box-sizing: border-box;
