--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     }
 
     .speaker-name { font-size: 1.6rem; font-weight: bold; margin-bottom: 10px; color: #000; }
-    .dialogue-text { font-size: 1.4rem; line-height: 1.6; margin-bottom: 20px; color: #000; }
+    .dialogue-text { font-size: 1.4rem; line-height: 1.6; margin-bottom: 20px; color: #cbd5e1; }
     .choices-container { display: flex; gap: 15px; }
 
     .choice-btn {
