--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     .choice-btn {
       padding: 12px 24px;
-      background: #000; color: #fff;
+      background: #6366f1; color: #fff;
       border: 2px solid #000; cursor: pointer; font-size: 1.1rem;
       transition: all 0.2s;
     }
