--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       z-index: 50;
     }
 
-    .speaker-name { font-size: 1.6rem; font-weight: bold; margin-bottom: 10px; color: #000; }
+    .speaker-name { font-size: 1.6rem; font-weight: bold; margin-bottom: 10px; color: #cbd5e1; }
     .dialogue-text { font-size: 1.4rem; line-height: 1.6; margin-bottom: 20px; color: #cbd5e1; }
     .choices-container { display: flex; gap: 15px; }
 
