--- a/index.html
+++ b/index.html
@@ -225,21 +225,21 @@
         location: "勞改營入口",
         speaker: "張教官",
         text: "我是張教官，我是來告訴你們為什麼會來到這裡。",
-        charImg: "https://via.placeholder.com/400x600/22c55e/ffffff?text=張教官",
+        charImg: "unnamed.jpg",
         choices: [{ text: "點擊繼續", next: "next1" }]
       },
       next1: {
         location: "勞改營入口",
         speaker: "張教官",
         text: "因為你們違背我們偉大的楊主席的命令，所以你們要進來好好反省你們的罪過。",
-        charImg: "https://via.placeholder.com/400x600/22c55e/ffffff?text=張教官",
+        charImg: "unnamed.jpg",
         choices: [{ text: "點擊繼續", next: "next2" }]
       }, // 注意這裡原本少了逗號
       next2: {
         location: "勞改營入口",
         speaker: "張教官",
         text: "我們現在來講新疆勞改營宣言，我念一遍，你念一遍。",
-        charImg: "https://via.placeholder.com/400x600/22c55e/ffffff?text=張教官",
+        charImg: "unnamed.jpg",
         choices: [
           { text: "跟著念", next: "speak" },
           { text: "含糊帶過", next: "speaklittle" },
