--- a/index.html
+++ b/index.html
@@ -225,21 +225,21 @@
         location: "勞改營入口",
         speaker: "張教官",
         text: "我是張教官，我是來告訴你們為什麼會來到這裡。",
-        charImg: "unnamed.jpg",
+        charImg: "chang.png",
         choices: [{ text: "點擊繼續", next: "next1" }]
       },
       next1: {
         location: "勞改營入口",
         speaker: "張教官",
         text: "因為你們違背我們偉大的楊主席的命令，所以你們要進來好好反省你們的罪過。",
-        charImg: "unnamed.jpg",
+        charImg: "chang.png",
         choices: [{ text: "點擊繼續", next: "next2" }]
       }, // 注意這裡原本少了逗號
       next2: {
         location: "勞改營入口",
         speaker: "張教官",
         text: "我們現在來講新疆勞改營宣言，我念一遍，你念一遍。",
-        charImg: "unnamed.jpg",
+        charImg: "chang.png",
         choices: [
           { text: "跟著念", next: "speak" },
           { text: "含糊帶過", next: "speaklittle" },
@@ -250,7 +250,7 @@
         location: "勞改營入口",
         speaker: "張教官",
         text: "很好，相信你們都清楚這裡的規則了，是時候該進去了，後會有期。",
-        charImg: "https://via.placeholder.com/400x600/22c55e/ffffff?text=張教官",
+        charImg: "chang.png",
         choices: [
           { text: "進入勞改營", next: "story1" },
           { text: "不要動作", next: "nomove" }
@@ -260,28 +260,28 @@
         location: "勞改營入口",
         speaker: "張教官",
         text: "沒吃飯嗎？大聲點！不過算了，進去後有的是時間調教你。",
-        charImg: "https://via.placeholder.com/400x600/22c55e/ffffff?text=張教官",
+        charImg: "chang.png",
         choices: [{ text: "沉重地走進去", next: "story1" }]
       },
       nospeak: {
         location: "勞改營入口",
         speaker: "張教官",
         text: "居然敢保持沉默？看來你是個硬骨頭。警衛！把他拖進去！",
-        charImg: "https://via.placeholder.com/400x600/ef4444/ffffff?text=憤怒的張教官",
+        charImg: "chang.png",
         choices: [{ text: "被強行拖走", next: "story1" }]
       },
       nomove: {
         location: "勞改營入口",
         speaker: "張教官",
         text: "還站在那邊幹什麼？想吃子彈嗎？快滾進去！",
-        charImg: "https://via.placeholder.com/400x600/22c55e/ffffff?text=張教官",
+        charImg: "chang.png",
         choices: [{ text: "迫於威脅進入", next: "story1" }]
       },
       story1: {
         location: "牢房",
         speaker: "旁白",
         text: "重重的鐵門在身後關上。這裡是你的新家，編號 9527。",
-        charImg: "https://via.placeholder.com/400x600/666666/ffffff?text=陰暗的牢房",
+        charImg: "",
         choices: [{ text: "待續...", next: "start" }]
       }
     };
